--- a/posts.html
+++ b/posts.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div id="content"></div>
+
+    <script src="/posts.js"></script>
+  </body>
 </html>
