Refactor post and posts HTML structure and JavaScript for consistency

--- a/post.html
+++ b/post.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="page-content"></div>
+    <div id="content"></div>
 
     <script src="post.js"></script>
   </body>
