import export refactor

--- a/post.html
+++ b/post.html
@@ -8,6 +8,6 @@
   <body>
     <div id="content"></div>
 
-    <script src="post.js"></script>
+    <script src="post.js" type="module"></script>
   </body>
 </html>
