--- a/posts.html
+++ b/posts.html
@@ -8,6 +8,6 @@
   <body>
     <div id="content"></div>
 
-    <script src="/posts.js"></script>
+    <script src="/posts.js" type="module"></script>
   </body>
 </html>
