Add create post functionality with initial JavaScript logging

--- a/create-post.html
+++ b/create-post.html
@@ -16,5 +16,7 @@
       <br />
       <button type="submit">Create Post</button>
     </form>
+
+    <script type="module" src="create-post.js"></script>
   </body>
 </html>
