Add header to Delete Todo page for better user guidance

--- a/delete-todo.html
+++ b/delete-todo.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo Delete</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Delete Todo</h1>
+  </body>
 </html>
