--- a/create-post.html
+++ b/create-post.html
@@ -6,16 +6,7 @@
     <title>Create New Post</title>
   </head>
   <body>
-    <h1>Create New Post</h1>
-    <form>
-      <label for="title">Title:</label>
-      <input type="text" id="title" name="title" required />
-      <br />
-      <label for="body">Content:</label>
-      <textarea id="body" name="body" required></textarea>
-      <br />
-      <button type="submit">Create Post</button>
-    </form>
+    <div id="page-content"></div>
 
     <script type="module" src="create-post.js"></script>
   </body>
