--- a/create-post.html
+++ b/create-post.html
@@ -8,6 +8,6 @@
   <body>
     <div id="page-content"></div>
 
-    <script type="module" src="create-post.js"></script>
+    <script type="module" src="/routes/create-post.js"></script>
   </body>
 </html>
