--- a/users.html
+++ b/users.html
@@ -8,6 +8,6 @@
   <body>
     <div id="content"></div>
 
-    <script src="users.js" type="module"></script>
+    <script src="/routes/users.js" type="module"></script>
   </body>
 </html>
