--- a/user.html
+++ b/user.html
@@ -8,6 +8,6 @@
   <body>
     <div id="content"></div>
 
-    <script src="user.js" type="module"></script>
+    <script src="/routes/user.js" type="module"></script>
   </body>
 </html>
