--- a/edit-post.html
+++ b/edit-post.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Edit Post</title>
   </head>
-  <body></body>
+  <body>
+    <div id="content"></div>
+
+    <script src="/routes/edit-post.js" type="module"></script>
+  </body>
 </html>
